<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:stretchColumns="2"
		>
		<TableRow android:layout_marginBottom="3dip" >
			<TextView
			    android:layout_marginRight="10dip"
				android:layout_height="wrap_content" 
				android:text="@string/count_label" />
			<EditText android:id="@+id/count"
			    android:inputType="number"
		 		android:background="#fff0d424"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_weight="1" />
		</TableRow>
		<TableRow android:layout_marginBottom="3dip" >
			<TextView
			    android:layout_marginRight="10dip"
				android:layout_height="wrap_content" 
				android:text="@string/total_label" />
			<EditText android:id="@+id/total" 
			    android:inputType="number"
		 		android:background="#fff0d424"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_weight="1" />
		</TableRow>
		<TableRow android:layout_marginBottom="3dip" >
			<TextView
			    android:layout_marginRight="10dip"
				android:layout_height="wrap_content" 
				android:text="@string/date_label" />
			<EditText android:id="@+id/date" 
			    android:inputType="number"
		 		android:background="#fff0d424"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_weight="1" />
		</TableRow>
		<TableRow android:layout_marginBottom="3dip" >
			<TextView
			    android:layout_marginRight="10dip"
				android:layout_height="wrap_content" 
				android:text="@string/datemod_label" />
			<EditText android:id="@+id/datemod" 
			    android:inputType="number"
		 		android:background="#fff0d424"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_weight="1" />
		</TableRow>
		<TableRow android:layout_marginBottom="3dip" >
			<TextView
			    android:layout_marginRight="10dip"
				android:layout_height="wrap_content" 
				android:text="@string/edited_label" />
			<EditText android:id="@+id/edited" 
			    android:inputType="text"
		 		android:background="#fff0d424"
			  	android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_weight="1" />
		</TableRow>
	</TableLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/comment_label" />
	<EditText android:id="@+id/comment" android:layout_width="fill_parent"
		android:inputType="text"
		android:gravity="top"
		android:background="#fffae663"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/save" 
		  android:text="@string/save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/delete" 
		  android:text="@string/delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/cancel" 
		  android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>